S3 Downloader Service - Executable for a long-running HTTP service that mimics executor download/untar operations to avoid doing them inside the task croup - Refactor executor to use shared code + optionally call local HTTP service / fallback to shared code path - Some configuration refactor to share more config

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
   <modules>
     <module>SingularityBase</module>
     <module>SingularityRunnerBase</module>
+    <module>SingularityS3Base</module>
     <module>MesosClient</module>
     <module>SingularityClient</module>
     <module>SingularityService</module>
@@ -73,6 +74,7 @@
     <module>SingularityExecutorCleanup</module>
     <module>SingularityLogWatcher</module>
     <module>SingularityS3Uploader</module>
+    <module>SingularityS3Downloader</module>
     <module>SingularityOOMKiller</module>
   </modules>
 
