--- a/SingularityS3Downloader/pom.xml
+++ b/SingularityS3Downloader/pom.xml
@@ -10,7 +10,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>SingularityExecutor</artifactId>
+  <artifactId>SingularityS3Downloader</artifactId>
 
   <repositories>
     <repository>
@@ -21,7 +21,8 @@
   </repositories>
 
   <properties>
-    <runner.class>com.hubspot.singularity.executor.SingularityExecutorRunner</runner.class>
+    <runner.class>com.hubspot.singularity.s3downloader.SingularityS3DownloaderRunner</runner.class>
+    <jetty.version>9.2.0.v20140526</jetty.version>
   </properties>
 
   <dependencies>
@@ -33,31 +34,15 @@
     </dependency>
 
     <dependency>
-      <groupId>com.github.jknack</groupId>
-      <artifactId>handlebars</artifactId>
-      <version>1.3.1</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>${jetty.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.ning</groupId>
-      <artifactId>async-http-client</artifactId>
-      <version>${ning.async.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-continuation</artifactId>
+      <version>${jetty.version}</version>
     </dependency>
 
   </dependencies>
@@ -165,5 +150,6 @@
       </plugin>
     </plugins>
   </build>
+
 
 </project>
