--- a/SingularityS3Uploader/pom.xml
+++ b/SingularityS3Uploader/pom.xml
@@ -28,14 +28,8 @@
 
     <dependency>
       <groupId>com.hubspot</groupId>
-      <artifactId>SingularityRunnerBase</artifactId>
+      <artifactId>SingularityS3Base</artifactId>
       <version>${singularity.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>net.java.dev.jets3t</groupId>
-      <artifactId>jets3t</artifactId>
-      <version>${jets3t.version}</version>
     </dependency>
 
   </dependencies>
