--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/HubSpot/Singularity",
   "repository": {
     "type": "git",
-    "url": "git@git.hubteam.com:HubSpot/singularity.git"
+    "url": "git@github.com:HubSpot/Singularity.git"
   },
   "engines": {
     "node": "~0.10.28",
