--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -21,6 +21,10 @@ Vagrant.configure("2") do |config|
   config.vm.box = "opscode_ubuntu-14.04_provisionerless"
   config.vm.box_url = "http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box"
 
+  config.vm.provider :virtualbox do |vb|
+      vb.customize ["modifyvm", :id, "--memory", "2048"]
+    end
+
   private_ip = '192.168.33.11'
   mysql_password = "mesos7mysql"
 
