Remove singularity.version and use project.version instead so the value does not need to be updated every release

--- a/SingularityOOMKiller/pom.xml
+++ b/SingularityOOMKiller/pom.xml
@@ -29,19 +29,19 @@
     <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>SingularityRunnerBase</artifactId>
-      <version>${singularity.version}</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>MesosClient</artifactId>
-      <version>${singularity.version}</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>SingularityClient</artifactId>
-      <version>${singularity.version}</version>
+      <version>${project.version}</version>
     </dependency>
 
   </dependencies>
