Rename MesosClient -> SingularityMesosClient so that all of the projects sort adjacent in your IDE

--- a/SingularityMesosClient/pom.xml
+++ b/SingularityMesosClient/pom.xml
@@ -9,7 +9,7 @@
     <version>0.3.8-SNAPSHOT</version>
   </parent>
 
-  <artifactId>MesosClient</artifactId>
+  <artifactId>SingularityMesosClient</artifactId>
 
   <repositories>
     <repository>
