add npm-debug.log to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ __pycache__
 local_singularity.yml
 qa_singularity.yml
 Docs/_build
+SingularityUI/npm-debug.log
 SingularityUI/node_modules/*
 SingularityUI/bower_components/*
 SingularityUI/brunchlog
