--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -184,7 +184,7 @@
     <dependency>
       <groupId>org.iq80.snappy</groupId>
       <artifactId>snappy</artifactId>
-      <version>0.4-SNAPSHOT</version>
+      <version>${snappy.version}</version>
     </dependency>
 
     <dependency>
