--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <jets3t.version>0.9.0</jets3t.version>
     <guava.version>17.0</guava.version>
     <baragon.version>0.1.0</baragon.version>
+    <snappy.version>0.3</snappy.version>
   </properties>
 
   <groupId>com.hubspot</groupId>
