--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>Singularity</artifactId>
-    <version>0.3.8</version>
+    <version>0.3.9-SNAPSHOT</version>
   </parent>
 
   <artifactId>SingularityService</artifactId>
