--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>com.hubspot</groupId>
   <artifactId>Singularity</artifactId>
-  <version>0.3.8</version>
+  <version>0.3.9-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <repositories>
