--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
   </parent>
 
   <properties>
+    <project.build.generated-resources>${project.build.directory}/generated-resources</project.build.generated-resources>
+
     <mesos.version>0.19.1</mesos.version>
     <sentry.version>5.0</sentry.version>
     <java.abi>1.7</java.abi>
@@ -79,6 +81,21 @@
   </modules>
 
   <build>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>${basedir}/src/main/java</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>${project.build.generated-resources}</directory>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
