--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,10 @@
 
   <properties>
     <project.build.generated-resources>${project.build.directory}/generated-resources</project.build.generated-resources>
-
     <mesos.version>0.19.1</mesos.version>
     <sentry.version>5.0</sentry.version>
     <java.abi>1.7</java.abi>
-    <dropwizard.version>0.7.0-rc2</dropwizard.version>
+    <dropwizard.version>0.7.0</dropwizard.version>
     <sl4fj.version>1.7.6</sl4fj.version>
     <jackson.version>2.3.1</jackson.version>
     <curator.version>2.4.2</curator.version>
