--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -67,6 +67,11 @@
       <version>3.3.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
 
 </project>
