--- a/SingularityExecutor/pom.xml
+++ b/SingularityExecutor/pom.xml
@@ -63,6 +63,11 @@
       </exclusions>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
