fix for eclipse ignoring the node build

--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -437,9 +437,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <execute>
-                      <runOnIncremental>false</runOnIncremental>
-                    </execute>
+                    <ignore></ignore>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
