Add a CORS filter to Singularity.
Allows running Singularity with a baseUrl setting that contains the
host name but then access the GUI using http://localhost...

--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -129,6 +129,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlets</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>de.neuland-bfi</groupId>
       <artifactId>jade4j</artifactId>
     </dependency>
