improvements / fixes to vagrant rig (fixes #225)

--- a/pom.xml
+++ b/pom.xml
@@ -140,4 +140,13 @@
     </plugins>
   </build>
 
+  <profiles>
+      <profile>
+          <id>vagrantBuild</id>
+          <build>
+              <directory>${vagrant.build.directory}/${project.artifactId}</directory>
+          </build>
+      </profile>
+  </profiles>
+
 </project>
