--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,25 +1,15 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
-# vagrant plugins required:
-# vagrant-berkshelf, vagrant-omnibus, vagrant-hostsupdater
 
 Vagrant.configure("2") do |config|
-  if !Vagrant.has_plugin?("vagrant-omnibus")
-    raise "Please install vagrant-omnibus via `vagrant plugin install vagrant-ominbus --plugin-version=1.4.1`"
-  end
-
-  if !Vagrant.has_plugin?("vagrant-berkshelf")
-    raise "Please install vagrant-berkshelf 2.0.1 via `vagrant plugin install vagrant-berkshelf --plugin-version=2.0.1`"
-  end
-
   if !Vagrant.has_plugin?("vagrant-hostsupdater")
     raise "Please install vagrant-hostsupdater via `vagrant plugin install vagrant-hostsupdater`"
   end
 
   config.vm.synced_folder "../", "/singularity", type: "nfs"
 
-  config.vm.box = "opscode_ubuntu-14.04_provisionerless"
-  config.vm.box_url = "http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box"
+  config.vm.box = "singularity-develop-0.20.0"
+  config.vm.box_url = "https://vagrantcloud.com/tpetr/boxes/singularity-develop-0.20.0/versions/1/providers/virtualbox.box"
 
   config.vm.provider :virtualbox do |vb|
       vb.customize ["modifyvm", :id, "--memory", "1024"]
@@ -28,45 +18,12 @@ Vagrant.configure("2") do |config|
   private_ip = '192.168.33.11'
   mysql_password = "mesos7mysql"
 
-  # enable plugins
-  config.berkshelf.enabled = true
-  config.omnibus.chef_version = :latest
-
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.auto_detect = true
   end
   
   config.vm.hostname = 'vagrant-singularity'
   config.vm.network :private_network, ip: private_ip
-
-  config.vm.provision :shell do |shell|
-    shell.inline = 'test -f $1 || (sudo apt-get update -y && touch $1)'
-    shell.args = '/var/run/apt-get-update'
-  end
-
-  config.vm.provision :chef_solo do |chef|
-    chef.log_level = :debug
-    chef.add_recipe "singularity"
-
-    # You may also specify custom JSON attributes:
-    chef.json = {
-      :mysql => {
-        :server_root_password => "#{mysql_password}",
-        :server_repl_password => "#{mysql_password}",
-        :server_debian_password => "#{mysql_password}",
-        :bind_address => "0.0.0.0",
-        :allow_remote_root => true
-      },
-      :mesos => {
-        :master => {
-          :hostname => config.vm.hostname
-        },
-        :slave => {
-          :hostname => config.vm.hostname
-        }
-      }
-    }
-  end
 
   config.vm.define "test", primary: true do |test|
     test.vm.provision "shell", path: "provision-singularity.sh"
